<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorial.ibrahimestanga.jpcapp.view.ListActivity">


    <LinearLayout
        android:id="@+id/ll_list_act_agg_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_lateral_list_act"
        android:layout_marginStart="@dimen/margin_lateral_list_act"
        android:layout_marginTop="@dimen/margin_top__button_list_act"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_list_act_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add_list_act" />

        <EditText
            android:id="@+id/et_list_act_add"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_list_act_remove_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_lateral_list_act"
        android:layout_marginStart="@dimen/margin_lateral_list_act"
        android:layout_marginTop="@dimen/margin_top__button_list_act"
        android:text="@string/remove_all_entries_list_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_list_act_agg_item" />

    <Button
        android:id="@+id/bt_list_act_short_ascendig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_ascending_list_act"
        android:layout_marginEnd="@dimen/margin_lateral_list_act"
        android:layout_marginStart="@dimen/margin_lateral_list_act"
        android:layout_marginTop="@dimen/margin_top__button_list_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_list_act_remove_item" />

    <TextView
        android:id="@+id/tv_list_act_number_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_list_list_act"
        android:layout_marginTop="@dimen/margin_top__text_view_title_list_act"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_list_act_short_ascendig"
        />

    <TextView
        android:id="@+id/tv_list_act_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_list_is_empty_list_act"
        android:layout_marginTop="@dimen/margin_top__text_view_msg_list_act"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_act_number_list"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_act"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_act_number_list" />




</android.support.constraint.ConstraintLayout>
